Start working on the landing page. Update the make script AGAIN.

--- a/frontend/src/Styles/_base.scss
+++ b/frontend/src/Styles/_base.scss
@@ -4,3 +4,21 @@
 	border: 0;
 	box-sizing: border-box;
 }
+
+html, body {
+	height: 100%;
+}
+
+body {
+	font: 400 14px 'Roboto', sans-serif;
+}
+
+body,
+main.dark {
+	background-color: $primary-bg-dark;
+	color: $primary-color-dark;
+} 
+
+main {
+	height: 100%;
+}
